[gd_scene load_steps=4 format=2]

[ext_resource path="res://Instantiable/Monster.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Mechanics/MonsterAreaLimit.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=131]
radius = 3000.0

[node name="AreaLimit" type="Area2D"]
script = ExtResource( 2 )
unique_area_name = "Shadow1"
db_creature_id = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 131 )

[node name="Spawner" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="Monster" parent="." instance=ExtResource( 1 )]
visible = false

[connection signal="body_entered" from="." to="." method="_on_AreaLimit_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_AreaLimit_body_exited"]
[connection signal="timeout" from="Spawner" to="." method="_spawn_monster"]
